--- a/Prova_cdc1/cadastro.html
+++ b/Prova_cdc1/cadastro.html
@@ -1,26 +1,66 @@
 <!doctype html5>
 <html>
         <head><title>Consultório de psicologia</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
         <form method="POST" action="cadastros.txt">
-            <hr>
-                <p>id_Paciente:<input type=text name="id" size="20"></p>
-                <p>Nome:<input type=text name="nome" size="20" maxlenght="50"></p>
-                <p>CPF:<input type=text name="CPF" size="20"></p>
-                <p>Data_de_nascimento:<input type=text name="Dat" size="10"></p>
-                <p>Sexo:<br>
-                <input type=radio name="mas">masculino<br>
-                <input type=radio name="fem">feminino</p>
-                <p>Endereco:<input type=text name="End" size="30"></p>
-                <p>Telefone:<input type=text name="Tel" size="10"></p>
-                <p>Data_de_cadrastro:<input type=text name="cadr" size="10"></p>
-                <p>Plano_de_saude:<br>
-                <input type=radio name="uni">unimed<br>
-                <input type=radio name="gold">golden cross</p> 
-                <p>Observacoes:</p><textarea name="obs" rows="2" cols="40"></textarea>
-                <input type=submit value="Enviar"><input type=reset value="limpar">
-            <hr>
+            <div class="form-group">
+                <label for="id_paciente">ID do paciente: </label>
+                <input type="text" class="form-control" name="id_paciente" required size="20">
+            </div>
+            <div class="form-group">
+                <label for="nome_paciente">Nome: </label>
+                <input type="text" class="form-control" name="nome_paciente" required size="50">
+            </div>
+            <div class="form-group">
+                <label for="cpf">CPF: </label>
+                <input type="text" class="form-control" name="cpf" required size="11" aria-describedby="cpf_help">
+                <small id="cpf_help" class="form-text text-muted">Somente números</small>
+            </div>
+            <div class="form-group">
+                <label for="data_nasc">Data de nascimento: </label>
+                <input type="date" class="form-control" name="data_nasc" required>
+            </div>
+            <div class="form-group">
+                <label for="sexo">Sexo:</label>
+                <select class="form-control" id="sexo">
+                    <option>Masculino</option>
+                    <option>Feminino</option>
+                    <option>Prefiro não informar</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="endereco">Endereço: </label>
+                <input type="text" class="form-control" name="endereco" size="100">
+            </div>
+            <div class="form-group">
+                <label for="telefone">Telefone: </label>
+                <input type="text" class="form-control" name="telefone" size="15" placeholder="+55 (21) 91234-9876">
+            </div>
+            <div class="form-group">
+                <label for="data_cad">Data de cadastro: </label>
+                <input type="date" class="form-control" name="data_cad">
+            </div>
+            <div class="form-group">
+                <label for="plano_saude">Plano de saúde:</label>
+                <select class="form-control" id="plano_saude">
+                    <option>Unimed</option>
+                    <option>Amil</option>
+                    <option>Golden Cross</option>
+                    <option>Não possui</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="obs">Observações: </label>
+                <textarea class="form-control" id="obs" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </body>
 </html>
