--- a/Prova_cdc1/sessao.html
+++ b/Prova_cdc1/sessao.html
@@ -1,25 +1,55 @@
 <!doctype html5>
 <html>
-<head>
-<title>Consultório de psicologia</title>
-</head>
-<body>
-    <form name="sessao" method="POST" action="pagina_inicial.html">
-        <br>
-        <hr>
-        <p>id_Sessao:<input type="text" name="id" size="20"></p>
-        <p>id_Anamnese:<input type="text" name="id" size="20"></p>
-        <p>Queixas_paciente:<br>
-        <input type="radio" name="Sim">Sim<br>
-        <input type="radio" name="Nao">Nao</p>
-        <p>Plano de tratamento:<input type="text" name="Plano" size="10"></p>
-        <p>Diagnostico final:<input type="text" name="Diag_final" size="15"></p>
-        <p>Resumo da sessão:<input type="text" name="res_sessao" size="20"></p>
-        <p>Evolução:<input type name="Evolucao" size="15"></p>
-        <p>Pago:<input type name="Pago" size="10"></p>
-        <input type="submit" value="Enter">
-        
-        <hr>
-    </form>
-</body>
+    <head>
+        <title>Consultório de psicologia</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    </head>
+    <body>
+        <form name="sessao" method="POST" action="pagina_inicial.html">
+            <br>
+            <hr>
+            <div class="form-group">
+                <label for="id_sessao">ID da sessão: </label>
+                <input type="number" class="form-control" name="id_anamnese" required>
+            </div>
+            <div class="form-group">
+                <label for="id_anamnese">ID da anamnese: </label>
+                <input type="number" class="form-control" name="id_anamnese" required>
+            </div>
+            <div class="form-group">
+                <label for="queixas">Queixas do paciente: </label>
+                    <input type="text" class="form-control" name="queixas" size="100">
+            </div>
+            <div class="form-group">
+                <label for="plan_tratamento">Plano de tratamento: </label>
+                <input type="text" class="form-control" name="plan_tratamento" size="50">
+            </div>
+            <div class="form-group">
+                <label for="diag_final">Diagnostíco final: </label>
+                <input type="text" class="form-control" name="diag_final" required size="50">
+            </div>
+            <div class="form-group">
+                <label for="resumo_sessao">Resumo da sessão: </label>
+                <input type="text" class="form-control" name="resumo_sessao" size="75">
+            </div>
+            <div class="form-group">
+                <label for="evolucao">Evolução do paicente: </label>
+                <input type="number" class="form-control" name="evolucao" placeholder="50%">
+            </div>
+            <div class="form-group">
+                <label for="pago">Pago: </label>
+                <select class="form-control" id="pago">
+                    <option>Sim</option>
+                    <option>Não</option>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <hr>
+        </form>
+    </body>
 </html>
