--- a/anamnese.html
+++ b/anamnese.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container">
             <h1>Cadastro de anamnese</h1>
-            <form name="anamnese" action="anamnese.txt" method="POST">
+            <form name="anamnese" action="pagina_inicial.html" method="POST">
                 <hr>
                 <div class="form-group">
                     <label for="id_anamnese">ID da anamnese: </label>
