--- a/cadastro.html
+++ b/cadastro.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container">
             <h1>Cadastro de paciente</h1>
-            <form method="POST" action="cadastros.txt">
+            <form method="POST" action="pagina_inicial.html">
                 <div class="form-group">
                     <label for="id_paciente">ID do paciente: </label>
                     <input type="text" class="form-control" name="id_paciente" required size="20">
