--- a/psicologo.html
+++ b/psicologo.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container">
             <h1>Cadastro de psicologo</h1>
-            <form name="psicologos" method="POST" action="psicologos.txt">
+            <form name="psicologos" method="POST" action="pagina_inicial.html">
                 <hr>
                 <div class="form-group">
                     <label for="id_psicologo">ID do psicologo: </label>
