--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
   <body class="text-center">
     <br><br><br><br><br><br>
     <div class="container">
-    <form class="form-signin">
+    <form class="form-signin" action="pagina_adm.html">
         <h1 class="h3 mb-3 font-weight-normal">Faça o seu login</h1>
         <label for="inputEmail" class="sr-only">Email address</label> 
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus><br>
