--- a/anamnese.html
+++ b/anamnese.html
@@ -10,7 +10,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div class="container">
+        <div class="container" style="background: #A9F5F2">
             <h1>Cadastro de anamnese</h1>
             <br>
             <form name="anamnese" action="pagina_inicial.html" method="POST">
