--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#563d7c">
   </head>
 
-  <body class="text-center">
+  <body class="text-center" style="background: #A9F5F2">
     <br><br><br><br><br><br>
     <div class="container">
     <form class="form-signin" action="pagina_adm.html">
