--- a/sessao.html
+++ b/sessao.html
@@ -9,7 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
-    <body>
+    <body style="background: #A9F5F2">
         <div class="container">
             <h1>Cadastro de sessão</h1>
             <br>              
