--- a/anamnese.html
+++ b/anamnese.html
@@ -9,8 +9,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
-    <body>
-        <div class="container" style="background: #A9F5F2">
+    <body style="background: rgb(6, 209, 202)">
+        <div class="container" style="background: rgb(169, 245, 242)">
             <h1>Cadastro de anamnese</h1>
             <br>
             <form name="anamnese" action="pagina_inicial.html" method="POST">
