--- a/cadastro.html
+++ b/cadastro.html
@@ -63,6 +63,10 @@
                     <label for="obs">Observações: </label>
                     <textarea class="form-control" id="obs" rows="3"></textarea>
                 </div>
+                <div class="form-group">
+                    <label for="exampleFormControlFile1">Foto do paciente</label>
+                    <input type="file" class="form-control-file" id="foto_paciente">
+                  </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>   
