--- a/login.html
+++ b/login.html
@@ -15,12 +15,20 @@
   </head>
   
   <body class="text-center" style="background: rgb(6, 209, 202)">
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-0 bg-white border-bottom shadow-sm" >
+      <img src="img/prancheta.png" width="30" height="30" class="d-inline-block left-top" >
+        <h5 class="my-2 mr-md-auto ">Consultório psicológico</h5>
+        <a class="btn btn-light" href="pagina_inicial.html">Pagina inicial</a>
+              <a class="btn btn-light" href="login.html">Login</a>
+              <a class="btn btn-light" href="">Contato</a>
+              <a class="btn btn-light" href="">Quem nós somos</a>
+          </div>
     <br><br><br><br><br><br><br><br><br><br>
     <div class="container" >
       
       <form class="form-signin" action="pagina_adm.html">
        
-      <h1 class="h3 mb-3 font-weight-normal">Faça o seu login</h1><br><br>
+      <h1 class="h2 mb-3 font-weight-normal">Faça o seu login</h1><br><br>
       <div class="row justify-content-md-center">
         <div class="col-4">
           <label for="inputEmail" class="sr-only">Email</label> 
@@ -39,7 +47,7 @@
       </div> 
       <div class="row justify-content-md-center">
         <div class="col-4">
-          <button class="btn btn-lg btn-primary btn-block" type="submit">logar</button>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
         </div>
       </div>
     </form>
