--- a/pagina_inicial.html
+++ b/pagina_inicial.html
@@ -12,14 +12,14 @@
   
 </head>
 
-<body style="background: #A9F5F2">
+<body style="background: rgb(6, 209, 202)">
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-0 bg-white border-bottom shadow-sm" >
   <img src="img/prancheta.png" width="30" height="30" class="d-inline-block left-top" >
     <h5 class="my-2 mr-md-auto ">Consultório psicológico</h5>
-    <a class="btn btn-outline-primary" href="pagina_inicial.html">Pagina inicial</a>
-    <a class="btn btn-outline-primary" href="login.html">Login</a>
-    <a class="btn btn-outline-primary" href="">Consultório</a>
-    <a class="btn btn-outline-primary" href="">Contato</a>
+    <a class="btn btn-light" href="pagina_inicial.html">Pagina inicial </a>
+    <a class="btn btn-light" href="login.html">Login </a>
+    <a class="btn btn-light" href="">Consultório </a>
+    <a class="btn btn-light" href="">Contato </a>
       </div>
     </br>
           <div class="container-fluid">
