--- a/cadastro.html
+++ b/cadastro.html
@@ -9,9 +9,21 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body style="background: rgb(6, 209, 202)">
+        <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-0 bg-white border-bottom shadow-sm" >
+            <img src="img/prancheta.png" width="30" height="30" class="d-inline-block left-top" >
+              <h5 class="my-2 mr-md-auto ">Consultório psicológico</h5>
+              <a class="btn btn-light" href="pagina_inicial.html">Pagina inicial</a>
+              <a class="btn btn-light" href="login.html">Login</a>
+              <a class="btn btn-light" href="cadastro.html">pacientes</a>
+              <a class="btn btn-light" href="psicologo.html">psicologos</a>
+              <a class="btn btn-light" href="sessao.html">sessões</a>
+              <a class="btn btn-light" href="anamnese.html">anamnese</a>
+              <a class="btn btn-light" href="">Contato</a>
+              <a class="btn btn-light" href="">Quem nós somos</a>
+                </div>
+              <br>
         <div class="container" style="background: rgb(169, 245, 242)">
             <h1>Cadastro de paciente</h1>
-            <br>
             <form method="POST" action="pagina_inicial.html">
                 <div class="form-group">
                     <label for="id_paciente">ID do paciente: </label>
