--- a/pagina_adm.html
+++ b/pagina_adm.html
@@ -12,20 +12,20 @@
     
   </head>
   
-  <body style="background: #A9F5F2">
+  <body style="background: rgb(6, 209, 202)">
   <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-0 bg-white border-bottom shadow-sm" >
     <img src="img/prancheta.png" width="30" height="30" class="d-inline-block left-top" >
       <h5 class="my-2 mr-md-auto ">Consultório psicológico</h5>
-      <a class="btn btn-outline-primary" href="pagina_inicial.html">Pagina inicial</a>
-      <a class="btn btn-outline-primary" href="login.html">Login</a>
-      <a class="btn btn-outline-primary" href="cadastro.html">pacientes</a>
-      <a class="btn btn-outline-primary" href="psicologo.html">psicologos</a>
-      <a class="btn btn-outline-primary" href="sessao.html">sessões</a>
-      <a class="btn btn-outline-primary" href="anamnese.html">anamnese</a>
-      <a class="btn btn-outline-primary" href="">Contato</a>
-      <a class="btn btn-outline-primary" href="">Quem nós somos</a>
+      <a class="btn btn-light" href="pagina_inicial.html">Pagina inicial</a>
+              <a class="btn btn-light" href="login.html">Login</a>
+              <a class="btn btn-light" href="cadastro.html">pacientes</a>
+              <a class="btn btn-light" href="psicologo.html">psicologos</a>
+              <a class="btn btn-light" href="sessao.html">sessões</a>
+              <a class="btn btn-light" href="anamnese.html">anamnese</a>
+              <a class="btn btn-light" href="">Contato</a>
+              <a class="btn btn-light" href="">Quem nós somos</a>
         </div>
-      </br>
+      <br>
             <div class="container-fluid">
               <div id="myCarousel" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
