--- a/cadastro.html
+++ b/cadastro.html
@@ -14,10 +14,10 @@
               <h5 class="my-2 mr-md-auto ">Consultório psicológico</h5>
               <a class="btn btn-light" href="pagina_inicial.html">Pagina inicial</a>
               <a class="btn btn-light" href="login.html">Login</a>
-              <a class="btn btn-light" href="cadastro.html">pacientes</a>
-              <a class="btn btn-light" href="psicologo.html">psicologos</a>
-              <a class="btn btn-light" href="sessao.html">sessões</a>
-              <a class="btn btn-light" href="anamnese.html">anamnese</a>
+              <a class="btn btn-light" href="cadastro.html">Pacientes</a>
+              <a class="btn btn-light" href="psicologo.html">Psicologos</a>
+              <a class="btn btn-light" href="sessao.html">Sessões</a>
+              <a class="btn btn-light" href="anamnese.html">Anamnese</a>
               <a class="btn btn-light" href="">Contato</a>
               <a class="btn btn-light" href="">Quem nós somos</a>
                 </div>
